// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render Expenses summary with 1 expense  1`] = `
<div>
  <h1>
    Viewing 
    expense
     expenses totalling 
    $1.23
  </h1>
</div>
`;

exports[`should correctly render Expenses summary with multiple expense  1`] = `
<div>
  <h1>
    Viewing 
    expenses
     expenses totalling 
    $12,398.99
  </h1>
</div>
`;
